[gd_scene load_steps=6 format=2]

[ext_resource path="res://Entities/Enemies/Goblin/Goblin_Animation.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Entities/Enemies/Goblin/goblin.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 4 )

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( 0, 0, -5, 0, -3, 4, 3, 4, 5, 0 )

[sub_resource type="Animation" id=3]
resource_name = "get_hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( -2, 1, -2, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.588235, 0.588235, 0.588235, 1 ), Color( 1, 1, 1, 1 ), Color( 0.588235, 0.588235, 0.588235, 1 ), Color( 1, 1, 1, 1 ), Color( 0.588235, 0.588235, 0.588235, 1 ) ]
}

[node name="Goblin" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
light_mask = 2
position = Vector2( 0, -20.991 )
frames = ExtResource( 1 )
animation = "birth"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
light_mask = 2
occluder = SubResource( 2 )
light_mask = 2

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 8 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/get_hit = SubResource( 3 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
